added box shadow to card

--- a/19. qr-code-component/style.css
+++ b/19. qr-code-component/style.css
@@ -36,6 +36,7 @@ body {
   border-radius: 1rem;
   width: 380px;
   background-color: var(--white);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .qr-code img {
